# paypay-module

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
paypay-module/: __init__.py  paypay-module.py
