[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siudayo-paypay"  
version = "0.5.0"
description = "Enhanced PayPay Module with AWS WAF Bypass Support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "tls-client",
    "pkce",
    "cryptography",
    "pyscrypt"
]

[tool.setuptools.packages.find]
where = ["."]
