[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paypay-module"  
version = "0.5.5"
description = "paypay bot検知の対策版"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "tls-client",
    "pkce",
    "cryptography",
    "pyscrypt"
]

[tool.setuptools.packages.find]
where = ["."]
